# tot_cmd

./: README.md  pyproject.toml
src/tot_cmd/: .cmd.py.swp  cmd.py
