[project]
name = "tot_cmd"
version = "0.3.3"
description = "Default template for PDM package"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = [
	'tot_plus>=0.1.1',
	'tot_minus>=0.1.3',
	'tot_multi>=0.1.1'
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.urls]
Homepage = "https://github.com/EstherCho-7/tot_cmd"
Issues = "https://github.com/EstherCho-7/tot_cmd/issues"
